# NeRF

./: CMakeLists.txt  CMakePresets.json  README.md
NeRF/: CMakeLists.txt  NeRF.cpp  NeRF.h
src/: CMakeLists.txt  main.cpp
src/renderer/: config.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  window.cpp  window.hpp
src/renderer/shaders/: triangle.frag  triangle.vert
